Update and rename Dm index.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XX茶飲完整菜單</title>
+    <title>步步昇茶飲完整菜單</title>
     <style>
         body {
             font-family: 'Microsoft JhengHei', Arial, sans-serif;
