--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
         <div class="item"><span>洛神玫瑰茶</span><span class="price">XL $35 / L $35</span></div>
         <div class="item"><span>日式煎茶</span><span class="price">XL $35 / L $35</span></div>
         <div class="item"><span>山茶花綠茶</span><span class="price">XL $35 / L $35</span></div>
-        <div class="item"><span>油切綠茶</span><span class="price">XL $35 / L $35</span></div>
         <div class="item"><span>玄米綠茶</span><span class="price">XL $35 / L $35</span></div>
         <div class="item"><span>寶妃紅茶</span><span class="price">XL $35 / L $35</span></div>
         <div class="item"><span>東方美人</span><span class="price">XL $35 / L $35</span></div>
@@ -144,9 +143,9 @@
     <div class="menu-category">
         <h2>綠茶系列</h2>
         <div class="item"><span>茉莉綠茶</span><span class="price">XL $25 / L $20</span></div>
-        <div class="item"><span>梅子綠茶</span><span class="price">XL $25 / L $20</span></div>
-        <div class="item"><span>檸檬綠茶</span><span class="price">XL $25 / L $20</span></div>
-        <div class="item"><span>脆梅綠茶</span><span class="price">XL $25 / L $20</span></div>
+        <div class="item"><span>梅子綠茶</span><span class="price">XL $30 / L $25</span></div>
+        <div class="item"><span>檸檬綠茶</span><span class="price">XL $40 / L $35</span></div>
+        <div class="item"><span>脆梅綠茶</span><span class="price">XL $45 / L $40</span></div>
         <div class="item"><span>鮮奶綠茶</span><span class="price">XL $50 / L $45</span></div>
     </div>
 
@@ -165,10 +164,10 @@
         <div class="item"><span>粉角奶茶</span><span class="price">XL $45 / L $40</span></div>
         <div class="item"><span>粉角奶綠</span><span class="price">XL $45 / L $40</span></div>
         <div class="item"><span>粉角烏龍奶</span><span class="price">XL $45 / L $40</span></div>
-        <div class="item"><span>黃妃奶茶</span><span class="price">XL $50 / L $45</span></div>
+        <div class="item"><span>貴妃奶茶</span><span class="price">XL $50 / L $45</span></div>
         <div class="item"><span>阿薩姆奶茶</span><span class="price">XL $50 / L $45</span></div>
         <div class="item"><span>烤奶茶</span><span class="price">XL $50 / L $45</span></div>
-        <div class="item"><span>茶花奶絲</span><span class="price">XL $50 / L $45</span></div>
+        <div class="item"><span>茶花奶綠</span><span class="price">XL $50 / L $45</span></div>
         <div class="item"><span>東方奶茶</span><span class="price">XL $50 / L $45</span></div>
     </div>
 
