--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 
     <div class="menu-category">
         <h2>現沖系列</h2>
-        <div class="item"><span>仙樟洛神茶</span><span class="price">XL $35 / L $35</span></div>
+        <div class="item"><span>仙渣洛神茶</span><span class="price">XL $35 / L $35</span></div>
         <div class="item"><span>洛神玫瑰茶</span><span class="price">XL $35 / L $35</span></div>
         <div class="item"><span>日式煎茶</span><span class="price">XL $35 / L $35</span></div>
         <div class="item"><span>山茶花綠茶</span><span class="price">XL $35 / L $35</span></div>
         <div class="item"><span>玄米綠茶</span><span class="price">XL $35 / L $35</span></div>
-        <div class="item"><span>寶妃紅茶</span><span class="price">XL $35 / L $35</span></div>
+        <div class="item"><span>貴妃紅茶</span><span class="price">XL $35 / L $35</span></div>
         <div class="item"><span>東方美人</span><span class="price">XL $35 / L $35</span></div>
         <div class="item"><span>阿薩姆紅茶</span><span class="price">XL $35 / L $35</span></div>
         <div class="item"><span>桂花烏龍</span><span class="price">XL $35 / L $35</span></div>
@@ -169,6 +169,7 @@
         <div class="item"><span>烤奶茶</span><span class="price">XL $50 / L $45</span></div>
         <div class="item"><span>茶花奶綠</span><span class="price">XL $50 / L $45</span></div>
         <div class="item"><span>東方奶茶</span><span class="price">XL $50 / L $45</span></div>
+        <div class="item"><span>煎奶茶</span><span class="price">XL $50 / L $45</span></div>
     </div>
 
     <div class="menu-category">
