--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <div class="menu-category">
         <h2>現沖系列</h2>
-        <div class="item"><span>仙渣洛神茶</span><span class="price">XL $35 / L $35</span></div>
+        <div class="item"><span>仙楂洛神茶</span><span class="price">XL $35 / L $35</span></div>
         <div class="item"><span>洛神玫瑰茶</span><span class="price">XL $35 / L $35</span></div>
         <div class="item"><span>日式煎茶</span><span class="price">XL $35 / L $35</span></div>
         <div class="item"><span>山茶花綠茶</span><span class="price">XL $35 / L $35</span></div>
