--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 </head>
 <body>
     <h1>步步昇完整菜單</h1>
+<p class="phone">電話: 0980959593</p>
 
     <div class="menu-category">
         <h2>現沖系列</h2>
