--- a/index.html
+++ b/index.html
@@ -174,6 +174,20 @@
     </div>
 
     <div class="menu-category">
+        <h2>多多/多酚系列</h2>
+        <div class="item"><span>綠茶多多</span><span class="price">XL $40 / L $35</span></div>
+        <div class="item"><span>綠茶多酚</span><span class="price">XL $50 / L $45</span></div>
+        <div class="item"><span>檸檬多多</span><span class="price">XL $50 / L $45</span></div>
+        <div class="item"><span>金桔多多</span><span class="price">XL $50 / L $45</span></div>
+        <div class="item"><span>檸檬多酚</span><span class="price">XL $55 / L $50</span></div>
+        <div class="item"><span>金桔多酚</span><span class="price">XL $55 / L $50</span></div>
+        <div class="item"><span>鮮奶多多</span><span class="price">XL $55 / L $50</span></div>
+        <div class="item"><span>鮮奶多酚</span><span class="price">XL $60 / L $55</span></div>
+        <div class="item"><span>蜂蜜檸檬多多</span><span class="price">XL $65 / L $60</span></div>
+        <div class="item"><span>蜂蜜金桔多多</span><span class="price">XL $65 / L $60</span></div>
+    </div>
+
+    <div class="menu-category">
         <h2>加料區</h2>
         <div class="item"><span>粉角/椰果/仙草凍</span><span class="price">+$5</span></div>
         <div class="item"><span>布丁</span><span class="price">+$15</span></div>
