--- a/index.html
+++ b/index.html
@@ -197,5 +197,45 @@
         ※ 冰塊甜度可調整<br>
         ※ 本菜單價格如有變動恕不另行通知
     </div>
+<!-- 浮動點單按鈕 -->
+<a href="https://kingki3365.github.io/Order/index.html" target="_blank" class="floating-order-btn" aria-label="前往點單系統">
+    點單系統
+</a>
+
+<style>
+.floating-order-btn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #e74c3c;
+    color: white;
+    padding: 12px 18px;
+    border-radius: 30px;
+    font-weight: bold;
+    text-decoration: none;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    transition: background-color 0.3s ease;
+    z-index: 1000;
+    font-family: 'Microsoft JhengHei', Arial, sans-serif;
+    user-select: none;
+    animation: swing 2s ease-in-out infinite;
+}
+
+.floating-order-btn:hover {
+    background-color: #c0392b;
+    animation-play-state: paused; /* 滑鼠懸停時暫停搖擺 */
+}
+
+/* 搖擺動畫 */
+@keyframes swing {
+    0%   { transform: rotate(0deg); }
+    15%  { transform: rotate(10deg); }
+    30%  { transform: rotate(-8deg); }
+    45%  { transform: rotate(6deg); }
+    60%  { transform: rotate(-4deg); }
+    75%  { transform: rotate(2deg); }
+    100% { transform: rotate(0deg); }
+}
+</style>
 </body>
 </html>
