--- a/index.html
+++ b/index.html
@@ -199,29 +199,48 @@
     </div>
 
 
+<!-- 浮動按鈕：點單系統 & 友情贊助 -->
+<button class="floating-order-btn" onclick="window.open('https://kingki3365.github.io/Order/index.html', '_blank')">點單系統</button>
+
+<button id="sponsor-btn">友情贊助</button>
+
 <style>
-/* 點單系統按鈕 */
-.floating-order-btn {
+/* 浮動按鈕共用樣式 */
+button.floating-order-btn, #sponsor-btn {
     position: fixed;
-    bottom: 20px;       /* 底部 20px */
-    right: 20px;        /* 右邊 20px */
-    background-color: #e74c3c;
-    color: white;
+    right: 20px;
     padding: 12px 18px;
-    border-radius: 30px;
+    border-radius: 25px;
+    font-size: 16px;
     font-weight: bold;
-    text-decoration: none;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-family: 'Microsoft JhengHei', Arial, sans-serif;
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    user-select: none;
     transition: background-color 0.3s ease;
     z-index: 1000;
-    font-family: 'Microsoft JhengHei', Arial, sans-serif;
-    user-select: none;
-    animation: swing 2s ease-in-out infinite;
 }
 
+/* 點單系統按鈕 */
+.floating-order-btn {
+    bottom: 20px;
+    background-color: #e74c3c;
+    animation: swing 2s ease-in-out infinite;
+}
 .floating-order-btn:hover {
     background-color: #c0392b;
-    animation-play-state: paused; /* 滑鼠懸停時暫停搖擺 */
+    animation-play-state: paused;
+}
+
+/* 友情贊助按鈕 */
+#sponsor-btn {
+    bottom: 80px; /* 避免與點單重疊 */
+    background-color: #3498db;
+}
+#sponsor-btn:hover {
+    background-color: #2980b9;
 }
 
 /* 搖擺動畫 */
@@ -234,36 +253,7 @@
     75%  { transform: rotate(2deg); }
     100% { transform: rotate(0deg); }
 }
-
-/* 友情贊助按鈕 */
-#sponsor-btn {
-    position: fixed;
-    bottom: 80px;       /* 把它往上推，避免重疊 */
-    right: 20px;
-    background: #3498db;
-    color: white;
-    border: none;
-    border-radius: 25px;
-    padding: 12px 18px;
-    font-size: 16px;
-    cursor: pointer;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-    z-index: 9999;
-    transition: background 0.3s;
-    font-family: 'Microsoft JhengHei', Arial, sans-serif;
-    user-select: none;
-}
-
-#sponsor-btn:hover {
-    background: #2980b9;
-}
 </style>
-
-<!-- 點單系統按鈕 -->
-<button class="floating-order-btn" onclick="window.location.href='https://kingki3365.github.io/-DM/'">點單系統</button>
-
-<!-- 友情贊助按鈕 -->
-<button id="sponsor-btn">友情贊助</button>
 
 <script>
   document.getElementById('sponsor-btn').addEventListener('click', () => {
