--- a/index.html
+++ b/index.html
@@ -206,7 +206,8 @@
 
 <style>
 /* 浮動按鈕共用樣式 */
-button.floating-order-btn, #sponsor-btn {
+button.floating-order-btn,
+#sponsor-btn {
     position: fixed;
     right: 20px;
     padding: 12px 18px;
@@ -236,7 +237,7 @@ button.floating-order-btn, #sponsor-btn {
 
 /* 友情贊助按鈕 */
 #sponsor-btn {
-    bottom: 80px; /* 避免與點單重疊 */
+    bottom: 80px; /* 與點單按鈕錯開 */
     background-color: #3498db;
 }
 #sponsor-btn:hover {
